@@ -1,13 +1,0 @@
-points:	100
-start:	10.0
-end:	60.0
-baselineOrder:	1
-backgroundWindow:	1.0
-noise:	RMS
-slicepoints:	5
-createFigure:	True
-minPeaks:	4
-minPeakSN:	27
-peakDetectionMin:	0.025
-peakDetectionEdge:	Sigma
-peakDetectionEdgeValue:	2.0
